--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -155,6 +155,18 @@
         margin: 0 auto;
         margin-top: toRem(150);
 
+        .tours{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+
+            span{
+                cursor: pointer;
+            }
+        }
+
         .tour{
             position: relative;
             padding-left: toRem(50);
