--- a/src/assets/scss/layouts/_song.scss
+++ b/src/assets/scss/layouts/_song.scss
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'gilroy', normal;
+            font-family: 'Gilroy', normal;
             height: toRem(150);
             font-weight: 800;
             line-height: 47px;
