finishing desktop version

--- a/src/assets/scss/layouts/_song.scss
+++ b/src/assets/scss/layouts/_song.scss
@@ -23,6 +23,7 @@
         }
 
         .btn-song{
+            cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
