--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -48,3 +48,34 @@
     line-height: $mobile-line-height;
   }
 }
+
+@mixin respond($breakpoint){
+
+  @if $breakpoint == phone-smallest {
+    @media only screen and (max-width: 23.438em) { @content }; //375px  
+  }
+
+  @if $breakpoint == phone-mini {
+    @media only screen and (max-width: 23.438em) { @content }; //375px  
+  }
+
+  @if $breakpoint == phone {
+    @media only screen and (max-width: 30em) { @content }; //480px
+  }
+
+  @if $breakpoint == tab-mini {
+    @media only screen and (max-width: 36em) { @content }; //576px
+  }
+
+  @if $breakpoint == tablet {
+    @media only screen and (max-width: 48em) { @content }; //768px
+}
+
+  @if $breakpoint == tab-port {
+      @media only screen and (max-width: 62em) { @content }; //992px
+  }
+
+  @if $breakpoint == tab-land {
+      @media only screen and (max-width: 75em) { @content }; //1200px
+  }
+}
