--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -6,6 +6,13 @@
   scroll-behavior: smooth;
 }
 
+body,
+html{
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 body{
   background: $color-1 !important;
 }
