--- a/src/assets/scss/layouts/_album.scss
+++ b/src/assets/scss/layouts/_album.scss
@@ -9,9 +9,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include respond (tablet){
+        margin-top: toRem(640);
+    }
     
     .album--title{
-        width: toRem(1000);
+        max-width: toRem(1000);
+        width: 100%;
         height: toRem(92);
         display: flex;
         justify-content: center;
@@ -27,7 +32,8 @@
     }
 
     .arrow{
-        width: toRem(1000);
+        max-width: toRem(1000);
+        width: 100%;
         height: toRem(93);
         margin: 0 auto;
         display: flex;
@@ -47,6 +53,10 @@
         height: toRem(405);
         width: 100%;
         justify-items: center;
+
+        @include respond(tablet){
+            height: auto;
+        }
     }
 
     .album__content{
@@ -56,11 +66,30 @@
         justify-content: center;
         justify-items: center;
 
+        @include respond(tablet){
+            width: 100%;
+            height: 100%;
+        }
+
         img{
             border-radius: 5px;
             justify-items: center;
             display: block;
             object-fit: cover;
+
+            @include respond (tab-port){
+                padding: 0 toRem(24);
+            }
+
+            @include respond(tablet){
+                width: 100%;
+                padding: 0 toRem(16);
+                height: toRem(230);
+            }
+
+            @include respond(phone-mini){
+                padding: 0 toRem(16);
+            }
         }
 
         .album__content-title{
@@ -90,6 +119,10 @@
         align-items: center;
         margin: toRem(30) auto 0;
         width: toRem(434);
+
+        @include respond (phone){
+            width: 100%;
+        }
 
         .btn--primary{
             display: flex;
