--- a/src/assets/scss/layouts/_videos.scss
+++ b/src/assets/scss/layouts/_videos.scss
@@ -6,8 +6,14 @@
 
     .container{
         position: relative;
-        width: toRem(1000);
+        max-width: toRem(1000);
+        width: 100%;
         height: 100%;
+
+        @include respond (tab-land){
+            padding: 0 toRem(32);
+        }
+        
 
         .title{
             padding-top: toRem(50);
@@ -58,6 +64,18 @@
                     background: #13172B;
                     box-shadow: -9px 0px 15px -3px rgba(0, 0, 0, 0.69);
                     transition: all 0.2s ease-out;
+
+                    @include respond(tablet) {
+                        left: 95%;
+                    }
+
+                    @include respond(phone-mini) {
+                        left: 92%;
+                    }
+
+                    @include respond(phone-mini) {
+                        left: 90%;
+                    }
                     }
                     
                     .prev-btn{
@@ -84,6 +102,10 @@
                     display: flex;
                     justify-content: space-between;
 
+                    @include respond (tab-port){
+                        justify-content: center;
+                    }
+
                     .video__content{
                         position: relative;
                         height: 100%;
@@ -106,10 +128,29 @@
                             align-items: center;
                             margin-bottom: toRem(24);
 
+                            @include respond(tab-port){
+                                width: 100%;
+                                justify-content: center;
+                                object-fit: cover;
+                            }
+
+                            .video-sub{
+                                &:first-child{
+                                    @include respond (phone) {
+                                        padding: 0 toRem(16);
+                                    }                                
+                                }
+                            }
+
                             img{
                                 position: relative;
                                 border-radius: 5px;
+
+                                @include respond(tab-port){
+                                    width: 100%;
+                                    object-fit: cover;
                             }
+                        }
 
                             .play-btn{
                                 position: absolute;
@@ -173,6 +214,14 @@
                         font-size: 30px;
                         line-height: 33px;
                         color: $color-5;
+
+                        @include respond(tablet){
+                            margin-top: 0;
+                        }
+
+                        @include respond(phone){
+                            font-size: 25px;
+                        }
                     }
 
                     p{
@@ -194,6 +243,13 @@
                     flex-direction: column;
                     align-items: center;
                     
+                    @include respond (tablet) {
+                        height: toRem(512);
+                    }
+
+                    @include respond (phone) {
+                        height: 100%;
+                    }
 
                     .play__btn{
                     background-color: $primary;
@@ -209,7 +265,7 @@
 
                         img{
                             width: toRem(20);
-                            height: toRemk(25);
+                            height: toRem(25);
                         }
 
                         &:hover{
@@ -225,6 +281,10 @@
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
+
+                        @include respond(tab-land){
+                            display: none;
+                        }
 
                         .video__duration{
                             position: relative;
